--- a/index7.html
+++ b/index7.html
@@ -20,7 +20,7 @@
     .gallery {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
-      gap: 15px;
+      gap: 16px;
       max-width: 1000px;
       margin: 0 auto;
     }
@@ -29,9 +29,9 @@
       width: 100%;
       height: 200px;
       object-fit: cover;
-      border-radius: 8px;
-      transition: transform 0.3s ease;
+      border-radius: 10px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      transition: transform 0.3s ease;
     }
 
     .gallery img:hover {
@@ -55,7 +55,7 @@
 </head>
 <body>
 
-  <h2>📸 Thư viện ảnh hoạt động</h2>
+  <h2>🖼️ Thư viện ảnh</h2>
 
   <section class="gallery">
     <img src="https://picsum.photos/200/300" alt="Ảnh 1">
