--- a/index3.html
+++ b/index3.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Thời khoá biểu</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bảng thời khoá biểu</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -19,15 +19,14 @@
 
     .timetable {
       display: grid;
-      grid-template-columns: repeat(6, 1fr); /* 6 cột: Thứ + 5 ngày */
-      gap: 5px;
-      max-width: 1000px;
+      grid-template-columns: 1fr 2fr 2fr; /* Thứ | Sáng | Chiều */
+      max-width: 800px;
       margin: 0 auto;
     }
 
     .timetable div {
       border: 1px solid #ccc;
-      padding: 15px;
+      padding: 12px;
       text-align: center;
       background-color: #ffffff;
     }
@@ -38,47 +37,67 @@
       font-weight: bold;
     }
 
-    .time-label {
+    .day {
       background-color: #caf0f8;
       font-weight: bold;
     }
 
-    @media (max-width: 768px) {
+    .time-note {
+      font-size: 12px;
+      color: #666;
+    }
+
+    @media (max-width: 600px) {
       .timetable {
-        font-size: 14px;
+        grid-template-columns: 1fr 1fr;
+      }
+
+      .timetable div:nth-child(3n+1) {
+        grid-column: span 2;
       }
     }
   </style>
 </head>
 <body>
 
-  <h2>🗓️ Bảng Thời Khoá Biểu</h2>
+  <h2>📚 Bảng Thời Khoá Biểu</h2>
 
-  <section class="timetable">
+  <div class="timetable">
     <!-- Hàng tiêu đề -->
-    <div class="header">Thời gian</div>
-    <div class="header">Thứ 2</div>
-    <div class="header">Thứ 3</div>
-    <div class="header">Thứ 4</div>
-    <div class="header">Thứ 5</div>
-    <div class="header">Thứ 6</div>
+    <div class="header">Thứ</div>
+    <div class="header">Sáng<br><span class="time-note">7:30 – 11:00</span></div>
+    <div class="header">Chiều<br><span class="time-note">13:30 – 17:00</span></div>
 
-    <!-- Hàng 1 -->
-    <div class="time-label">Sáng</div>
-    <div>Lập trình Web</div>
-    <div>Toán kinh tế</div>
-    <div></div>
-    <div>Thiết kế web</div>
+    <!-- Thứ 2 -->
+    <div class="day">Thứ 2</div>
+    <div>Nhập môn lập trình</div>
     <div></div>
 
-    <!-- Hàng 2 -->
-    <div class="time-label">Chiều</div>
+    <!-- Thứ 3 -->
+    <div class="day">Thứ 3</div>
+    <div>Tài chính DN</div>
+    <div>Hệ thống CN Web</div>
+
+    <!-- Thứ 4 -->
+    <div class="day">Thứ 4</div>
     <div></div>
-    <div>Thương mại điện tử</div>
     <div>Marketing số</div>
+
+    <!-- Thứ 5 -->
+    <div class="day">Thứ 5</div>
+    <div>Nguyên lý kế toán</div>
     <div></div>
-    <div>Phân tích dữ liệu</div>
-  </section>
+
+    <!-- Thứ 6 -->
+    <div class="day">Thứ 6</div>
+    <div></div>
+    <div>Tiếng Anh 2</div>
+
+    <!-- Thứ 7 -->
+    <div class="day">Thứ 7</div>
+    <div>Thực hành nhóm</div>
+    <div>Kỹ năng mềm</div>
+  </div>
 
 </body>
 </html>
